# xcli

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: build-run-launch-flow.md
src/: build.rs  cache.rs  destination.rs  launch.rs  main.rs  scheme.rs  util.rs  workspace.rs
src/cmd/: build.rs  clean.rs  configure.rs  mod.rs  reset.rs
