[package]
name = "xcraft"
version = "0.0.1"
edition = "2024"
description = "CLI for building and running Xcode projects from the terminal"
authors = ["Bugen Zhao <i@bugenzhao.com>"]
license = "MIT"
repository = "https://github.com/BugenZhao/xcraft"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "1"
walkdir = "2"
